# hoppr-cop

./: .gitignore  .gitlab-ci.yml  .gitpod.yml  .pre-commit-config.yml  .pylintrc  .releaserc.yml  Dockerfile  LICENSE.md  README.md  SECURITY.md  gitlab_schema.json  grype_check2.sh  mkdocs.yml  package.json  pyproject.toml  renovate.json  sbom.json
.github/workflows/: codeql-analysis.yml  scorecards.yml
ci/: build-images.yml  check.yml  docker.yml  pages.yml  semantic-release.yml
ci/tests/: docker-integration-test.py  npm.json
common/: README.md  utils.py  vulnerability_combiner.py  vulnerability_scanner.py
common/reporting/: gitlab_renderer.py  models.py  reporting.py
common/reporting/templates/: package-lock.json  tailwind.config.js  vulnerabilities.html  vulnerability_details.html
docs/: CHANGELOG.md  contributing.md  data-sources.md  development.md  generating-boms.md  index.md  install.md  os-distro.md  python-module.md  usage.md
docs/css/: custom.css  termynal.css
docs/example-reports/: npm-vulnerabilities.html
docs/example-reports/assets/: vulnerabilities.css
docs/example-reports/maven-details/: CVE-2016-1000027.html  CVE-2018-25031.html  CVE-2019-0205.html  CVE-2019-0210.html  CVE-2019-12415.html  CVE-2020-13949.html  CVE-2020-29582.html  CVE-2020-36518.html  CVE-2020-5408.html  CVE-2020-8908.html  CVE-2021-0341.html  CVE-2021-22060.html  CVE-2021-22096.html  CVE-2021-22132.html  CVE-2021-22134.html  CVE-2021-22135.html  CVE-2021-22144.html  CVE-2021-23926.html  CVE-2021-29425.html  CVE-2021-31684.html  CVE-2021-38153.html  CVE-2021-39239.html  CVE-2021-42340.html  CVE-2021-42550.html  CVE-2021-43466.html  CVE-2021-43797.html  CVE-2021-44832.html  CVE-2021-45105.html  CVE-2022-0272.html  CVE-2022-22950.html  CVE-2022-22963.html  CVE-2022-22965.html  CVE-2022-22968.html  CVE-2022-22970.html  CVE-2022-22971.html  CVE-2022-22976.html  CVE-2022-22979.html  CVE-2022-24329.html  CVE-2022-24823.html  CVE-2022-25647.html  (+28 more)
docs/example-reports/npm-details/: CVE-2004-2761.html  CVE-2007-2379.html  CVE-2007-4027.html  CVE-2007-4430.html  CVE-2008-2173.html  CVE-2010-1584.html  CVE-2013-1779.html  CVE-2014-1936.html  CVE-2014-3342.html  CVE-2016-10538.html  CVE-2017-18589.html  CVE-2018-16487.html  CVE-2018-3721.html  (+57 more)
docs/js/: custom.js  termynal.js
hoppr-integration-test/: manifest.yml  sbom.json  transfer.yml
hopprcop/: __init__.py
hopprcop/combined/: cli.py  combined_scanner.py
hopprcop/gemnasium/: gemnasium_scanner.py  models.py  semver
hopprcop/grype/: grype_scanner.py  models.py
hopprcop/hoppr_plugin/: hopprcop_plugin.py
hopprcop/ossindex/: README.md  oss_index_scanner.py
hopprcop/trivy/: trivy_scanner.py
tests/: test_plugin.py  test_vuln.py
vuln/: __init__.py
vuln/combined/: cli.py  combined_scanner.py
vuln/gemnasium/: README.md  cli.py  gemnasium_scanner.py  models.py
vuln/grype/: README.md  cli.py  grype_scanner.py  models.py
vuln/ossindex/: cli.py  oss_index_scanner.py
vuln/trivy/: README.md  cli.py  trivy_scanner.py
(+9 files in other folders)
