[tool.poetry]
name = "hoppr-cop"
version = "1.0.19"
description = ""
authors = ["kganger <keith.e.ganger@lmco.com>"]
license = "MIT"

packages = [
    { include = "hopprcop" },
]

[tool.poetry.dependencies]
python = "^3.10 "
hoppr-cyclonedx-models = "^0.2.1"
typer = "^0.7.0"
PyYAML = "^6.0"
cvss = "^2.5"
packageurl-python = "^0.10.1"
tabulate = "^0.9.0"
tinydb = "^4.7.0"
rich = "^12.5.1"
hoppr-security-commons = "^0.0.7"
mkdocs = "^1.3.1"
mkdocs-mermaid2-plugin = "^0.6.0"
hoppr = "^1.6.2"
pytest = "7.2.0"
coverage = "^6.5.0"

[tool.poetry.scripts]
hoppr-cop = "hopprcop.combined.cli:app"


[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = "^22.6.0"
pylint = "^2.14.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "hoppr-security-commons"
url = "https://gitlab.com/api/v4/projects/38610490/packages/pypi/simple"

