[tool.poetry]
name = "hoppr-cop"
version = "1.1.0"
description = ""
authors = ["kganger <keith.e.ganger@lmco.com>"]
license = "MIT"

[[tool.poetry.packages]]
include = "hopprcop"

[tool.poetry.dependencies]
python = "^3.10 "
hoppr-cyclonedx-models = ">=0.4.7"
typer = "^0.7.0"
PyYAML = "^6.0"
cvss = "^2.5"
packageurl-python = "^0.10.1"
tabulate = "^0.9.0"
tinydb = "^4.7.0"
rich = ">12.5.1"
mkdocs = "^1.3.1"
mkdocs-mermaid2-plugin = "^0.6.0"
hoppr = "^1.7.2"
pytest = "7.2.1"
coverage = "^7.0.0"
hoppr-security-commons = "^0.0.13"
mkdocs-glightbox = "^0.3.1"
pygments = "^2.14.0"
pymdown-extensions = "^9.9.2"

[tool.poetry.scripts]
hoppr-cop = "hopprcop.combined.cli:app"


[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = "^23.0.0"
pylint = "^2.14.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

