[tool.poetry]
name = "hoppr-cop"
version = "1.1.9"
description = ""
authors = ["kganger <keith.e.ganger@lmco.com>"]
license = "MIT"

[[tool.poetry.packages]]
include = "hopprcop"

[tool.poetry.dependencies]
python = "^3.10"
cvss = "^2.5"
# hoppr = "^1.8.0"
hoppr-cyclonedx-models = "0.*"
hoppr-security-commons = "0.*"
packageurl-python = "0.*"
PyYAML = "^6.0"
rich = ">12.5.1"
tinydb = "^4.7.0"
typer = "0.*"

[tool.poetry.dependencies.hoppr]
git = "https://gitlab.com/hoppr/hoppr.git"
branch = "root-attribute-fix"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.3.1"
mkdocs-glightbox = "0.*"
mkdocs-mermaid2-plugin = "0.*"
pygments = "^2.14.0"
pymdown-extensions = "^10.0.0"

[tool.poetry.group.test.dependencies]
coverage = "^7.0.0"
pytest = "7.4.0"

[tool.poetry.scripts]
hoppr-cop = "hopprcop.combined.cli:app"

[tool.poetry.plugins."hoppr.plugin"]
hopprcop_plugin = "hopprcop.hoppr_plugin.hopprcop_plugin:HopprCopPlugin"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = "^23.0.0"
pylint = "^2.14.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
